# docs/swagger.json
@@ -83,6 +83,48 @@
           }
         }
       }
+    },
+    "/api/users/login": {
+      "get": {
+        "tags": [
+          "users"
+        ],
+        "summary": "Iniciar sesión",
+        "description": "Permite iniciar sesión a los usuarios registrados.",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "email": {
+                    "type": "string",
+                    "format": "email",
+                    "description": "La dirección de correo electrónico del usuario."
+                  },
+                  "password": {
+                    "type": "string",
+                    "format": "password",
+                    "description": "La contraseña del usuario."
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Usuario registrado exitosamente."
+          },
+          "400": {
+            "description": "Error en la solicitud, revisa los datos enviados."
+          },
+          "500": {
+            "description": "Error interno del servidor."
+          }
+        }
+      }
     }
   }
 }
